recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:5: error: not found: value stop
else (stop and break it down)
      ^