recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
if(steps!=0) { avance(steps);gauche(angle);spiral(steps+1,angle,length+increment,increment)
}
else (stop and break it down)
}